--- a/assets/Scss/layout/_cv-form-header.scss
+++ b/assets/Scss/layout/_cv-form-header.scss
@@ -1,6 +1,6 @@
 .cv-form-header {
     .header-container {
-        margin-top: 40px;
+        padding-top: 40px;
         @include flex-box(center, center);
 
         .title {
