--- a/assets/Scss/layout/_cv-preview.scss
+++ b/assets/Scss/layout/_cv-preview.scss
@@ -40,6 +40,7 @@
                 h3 {
                     letter-spacing: 0.5px;
                     padding-bottom: 0.5rem;
+                    font-weight: 700;
                 }
             }
 
