--- a/assets/Scss/main.scss
+++ b/assets/Scss/main.scss
@@ -6,3 +6,10 @@
 .print-btn-section {
     margin: 2rem 0 6rem 0;
 }
+
+.navbar.sticky {
+    position: fixed;
+    z-index: 111111;
+    width: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
