--- a/assets/Scss/layout/_cv-form-block.scss
+++ b/assets/Scss/layout/_cv-form-block.scss
@@ -6,6 +6,7 @@
         padding: 1rem 1.6rem;
         margin-bottom: 2rem;
         box-shadow: $shadow-color;
+        border-radius: 5px;
 
         h3 {
             color: $clr-white;
@@ -22,6 +23,7 @@
         box-shadow: $shadow-color;
         margin-bottom: 1rem;
         position: relative;
+        border-radius: 5px;
 
         @include laptop {
             padding: 3rem 3rem 0rem 3rem;
