--- a/assets/StyleSheet/resume.css
+++ b/assets/StyleSheet/resume.css
@@ -242,6 +242,7 @@ a {
   padding: 1rem 1.6rem;
   margin-bottom: 2rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  border-radius: 5px;
 }
 .cv-form-block .cv-form-row-title h3 {
   color: #fff;
@@ -256,6 +257,7 @@ a {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   margin-bottom: 1rem;
   position: relative;
+  border-radius: 5px;
 }
 @media only screen and (min-width: 993px) {
   .cv-form-block .cv-form-row {
